# SWE-smith-ts

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  WORKFLOW.md  index.html  mkdocs.yml  objects.inv  pipelines.md  pyproject.toml  setup.sh  sitemap.xml
.github/workflows/: build-docs.yaml  check-links.yaml  pytest.yaml
agent/: _gen_trajs.sh  _infer_model.sh  _traj_mgr.sh  swesmith_gen_claude.yaml  swesmith_gen_glm_ts.yaml  swesmith_gen_gpt.yaml  swesmith_infer.yaml  swesmith_infer_eval20_vllm.yaml  swesmith_infer_ts.yaml  swesmith_install_repo.yaml
configs/: install_repo.sh
configs/bug_gen/: README.md  class_basic.yml  func_fun.yml  lm_modify.yml  lm_rewrite.yml  ts_modify.yml  ts_rewrite.yml
configs/issue_gen/: ig_v2.yaml
configs/train/: dpo_qwen_32b.yml  dpo_qwen_7b.yml  full_ft_qwen_32b.yml  full_ft_qwen_7b.yml  full_ft_qwen_7b_local.yml
css/: bubbles.css
docs/: CNAME  blog.html  index.html
docs/assets/: paper.pdf.html  traj_ids_swealm32b.txt
docs/css/: carousel.css  custom.css  home.css
docs/docs/: index.md
docs/getting_started/: assets.md  index.md  installation.md  quickstart.md
docs/guides/: create_instances.md  difficulty_rating.md  env_construction.md  env_construction_py.md  harnesses.md  index.md  issue_gen.md  train_swe_agent.md  ts_migration_report.md
docs/overrides/: main.html
getting_started/: index.html
getting_started/assets/: index.html
getting_started/installation/: index.html
getting_started/quickstart/: index.html
guides/: index.html
guides/create_instances/: index.html
guides/difficulty_rating/: index.html
guides/env_construction/: index.html
guides/env_construction_py/: index.html
guides/harnesses/: index.html
guides/issue_gen/: index.html
guides/train_swe_agent/: index.html
guides/ts_migration_report/: index.html
scripts/: auto_profile_ts.py  bug_gen.py  bug_gen_modal.py  calculate_cost.py  cheatsheet.sh  generate_sample_instances.py  setup_env.sh  train.get_difficulties.sh  train.prepare_sft_local.sh  train.run_ft_torchtune.local.sh  train.run_ft_torchtune.sh  train.run_ft_unsloth.sh  train.serve_sglang.local.sh  train.serve_sglang.sh  train_eval_token_accuracy.py  train_get_difficulties.sh  train_prepare_sft_local.sh  train_run_ft_torchtune.sh  train_run_ft_torchtune_local.sh  train_run_ft_unsloth.sh  train_serve_sglang.sh  train_serve_sglang_local.sh  ts_standard_pipeline.py
search/: search_index.json
swesmith/: __init__.py  constants.py
swesmith/bug_gen/: collect_patches.py  get_cost.py  utils.py
swesmith/build_repo/: create_images.py  download_images.py  try_install_py.py
swesmith/harness/: eval.py  gather.py  grading.py  repair.py  utils.py  valid.py
swesmith/issue_gen/: generate.py  get_from_pr.py  get_from_tests.py  get_static.py  utils.py  viewer.py
swesmith/profiles/: __init__.py  base.py  c.py  cpp.py  csharp.py  golang.py  java.py  javascript.py  php.py  python.py  rust.py  typescript.py  utils.py
swesmith/train/: README.md  (+2 more)
tests/: conftest.py
(+112 files in other folders)
