[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "swesmith"
dynamic = ["version"]
authors = [
    {name = "John Yang", email = "byjohnyang@gmail.com"}
]
description = "The official SWE-smith package - A toolkit for generating software engineering training data at scale."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "benchmark", "code"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Base dependencies are empty to allow granular dependency groups for Modal images
dependencies = []

[project.optional-dependencies]
# Full dependencies for local development
all = [
    "astor",
    "datasets",
    "docker",
    "ghapi",
    "libcst",
    "litellm",
    "matplotlib",
    "modal",
    "openai",
    "pre-commit",
    "python-dotenv",
    "rich",
    "sglang",
    "sparklines",
    "swebench",
    "tiktoken",
    "tqdm",
    "tree-sitter>=0.25",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-c-sharp",
    "tree-sitter-go",
    "tree-sitter-javascript",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-rust",
    "tree-sitter-typescript",
    "unidiff",
    "textual",
    "tree-sitter-php>=0.23.11",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]>=0.18",
    "mike",
]
test = [
    "pytest",
    "pytest-cov",
]
# Minimal dependencies for remote validation (no sglang, litellm, openai, docker, etc.)
validate = [
    "ghapi",
    "python-dotenv",
    "rich",
    "swebench",
    "unidiff",
    "tqdm",
]
# Minimal dependencies for remote procedural bug generation (no sglang, litellm, openai, datasets, etc.)
generate = [
    "astor",
    "docker",
    "ghapi",
    "libcst",
    "python-dotenv",
    "rich",
    "swebench",
    "tqdm",
    "tree-sitter>=0.25",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-c-sharp",
    "tree-sitter-go",
    "tree-sitter-javascript",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-rust",
    "tree-sitter-typescript",
    "tree-sitter-php>=0.23.11",
    "unidiff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "swesmith.__version__"}

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project.urls]
"Documentation" = "https://github.com/SWE-bench/SWE-smith"
"Bug Reports" = "https://github.com/SWE-bench/SWE-smith/issues"
"Source Code" = "https://github.com/SWE-bench/SWE-smith"
"Website" = "https://swesmith.com"

[tool.ruff]
exclude = ["notebooks"]
